[workspace]
members = [".", "crates/*", "tools/*"]

[workspace.dependencies]
anyhow = "1.0.79"
argh = "0.1.12"
cartridge = { path = "crates/cartridge" }
sound-mimic = { path = "." }
hound = "3.5.1"
nalgebra = { version = "0.33.2", features = ["rayon"] }
fft = { package = "rustfft", version = "6.1.0" }

[package]
name = "sound-mimic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = "0.1.40"
tracing-timing = "0.6.0"

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
debug = true
