[package]
name = "mimic"
version = "0.1.0"
edition = "2024"

[features]
apple-accelerate = ["blas-src/accelerate", "ndarray/blas"]
profile = []

[dependencies]
argh = { workspace = true }
hound = { workspace = true }
sound-mimic = { workspace = true }
fft = { workspace = true }
ndarray = { workspace = true, features = ["rayon"] }
ndarray-stats = { workspace = true }
ndarray-linalg = { workspace = true }
blas-src = { version = "0.10.0", optional = true }
ordered-float = "4.2.0"
rayon = "1.8.0"
indicatif = "0.17.9"
