[package]
name = "mimic"
version = "0.1.0"
edition = "2024"

[features]
apple-accelerate = ["dep:apple-accelerate"]
cblas = ["dep:cblas-sys", "dep:blas-src"]

[dependencies]
argh = { workspace = true }
hound = { workspace = true }
sound-mimic = { workspace = true }
fft = { workspace = true }
nalgebra = { workspace = true }
ordered-float = "4.2.0"
rayon = "1.8.0"
indicatif = "0.17.9"
blas-src = { version = "0.10.0", optional = true }
cblas-sys = { version = "0.1.4", optional = true }
apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
