[package]
name = "mimic"
version = "0.1.0"
edition = "2024"

[features]
default = ["apple-accelerate"]
apple-accelerate = ["dep:apple-accelerate"]

[dependencies]
argh = { workspace = true }
hound = { workspace = true }
sound-mimic = { workspace = true }
fft = { workspace = true }
nalgebra = { workspace = true }
ordered-float = "4.2.0"
rayon = "1.8.0"
indicatif = "0.17.9"

[target.'cfg(target_os = "macos")'.dependencies]
apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
